# fsaRegExTranslator

./: CMakeLists.txt
errors/: ErrorHandling.cpp  ErrorHandling.h
fsa/: FSA.cpp  FSA.h
incoming data/: InputData.cpp  InputData.h
kleene's algorithm/: KleeneAlgorithm.cpp  KleeneAlgorithm.h
main/: include.h  main.cpp
